# src/routes/account.routes.js
@@ -1,0 +1,8 @@
+const express = require('express');
+const router = express.Router();
+const userCtrl = require('../controllers/user.controller');
+const auth = require('../middlewares/auth.middleware');
+
+router.get('/', auth, userCtrl.getAccount);
+
+module.exports = router;
